<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Les Joies de l\'Etudiant Info</string>
	<string name="about">les Joies de l\'Etudiant Info,\nanciennement les Joies de la Miage Nancy\n est un site inspiré des Joies du Code\n\ncette application n\'est pas officielle\n\nles gifs présentés dans cette application sont issus de lesjoiesdeletudiantinfo.com</string>
	<string name="first_disclaimer">bienvenue dans l\'application non officielle des Joies de l\'Etudiant Info !\n\nveuillez patienter pendant le premier telechargement des gifs\n\n</string>
	<string name="first_disclaimer_notifs"> activer les notifications</string>
	<string name="first_disclaimer_valider">[ OK ]</string>
	<string name="open_site">Ouvrir sur le site</string>
	<string name="refresh">Rafraîchir</string>
	<string name="about_menu">A propos de…</string>
	<string name="menu_notifications">Notifications</string>
	<string name="menu_share">Partager</string>
	<string name="menu_clear_cache">Vider le cache</string>
	<string name="vote">Si vous aimez l\'application, pourriez-vous prendre 1 minute pour la noter sur Google Play ? Merci ! :)</string>
	<string name="vote_title">Noter l\'application</string>
	<string name="vote_yes">Oui !</string>
	<string name="vote_no">Non</string>
	<string name="vote_notnow">Pas maintenant</string>
	<string name="cache_emptied_plur">Vidage du cache réussi : # fichiers supprimés</string>
	<string name="cache_emptied_sing">Vidage du cache réussi : 1 fichier supprimé</string>
	<string name="cache_emptied_none">Vidage du cache ignoré : le cache est vide</string>
	<string name="menu_contact">Nous contacter</string>
	<string name="countdown_txt">Prochain gif dans </string>
	<string name="download_error">Erreur lors du téléchargement de ce gif…</string>

</resources>
