<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
	  xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
		app:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_about"
        app:showAsAction="never"
        android:title="@string/about_menu"/>
    <item
        android:id="@+id/notifications"
        android:checkable="true"
        android:checked="true"
		app:showAsAction="never"
        android:title="@string/menu_notifications"/>
    <item
        android:id="@+id/menu_clear_cache"
		app:showAsAction="never"
        android:title="@string/menu_clear_cache"/>
    <item 
    	android:id="@+id/menu_contact"
		app:showAsAction="never"
    	android:title="@string/menu_contact" />
    
</menu>
