<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<android.support.v7.widget.Toolbar
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/toolbar"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorPrimary"
		app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
		app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ProgressBar
			android:id="@+id/pb"
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_margin="20dp"
			android:visibility="gone" />

		<ListView
			android:id="@+id/list"
			android:layout_width="match_parent"
			android:layout_height="match_parent" />

		<LinearLayout
			android:id="@+id/countdown_container"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="#dd067C40"
			android:gravity="center_vertical|center_horizontal"
			android:orientation="vertical"
			android:visibility="gone" >

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_vertical|center_horizontal"
				android:orientation="horizontal"
				android:paddingTop="9dp"
				android:paddingBottom="6dp" >

				<TextView
					android:id="@+id/countdown_txt"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginRight="20dp"
					android:shadowColor="#003000"
					android:shadowDx="0"
					android:shadowDy="1"
					android:shadowRadius="1"
					android:text="@string/countdown_txt"
					android:textColor="#ffffff"
					android:textSize="@dimen/countdown_fontsize1" />

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/countdown_shape"
					android:orientation="vertical" >

					<TextView
						android:id="@+id/countdown_hh"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:shadowColor="#003000"
						android:shadowDx="0"
						android:shadowDy="2"
						android:shadowRadius="2"
						android:textColor="#ffffff"
						android:textSize="@dimen/countdown_fontsize2" />
				</LinearLayout>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:shadowColor="#003000"
					android:shadowDx="0"
					android:shadowDy="2"
					android:shadowRadius="2"
					android:text=":"
					android:textColor="#ffffff"
					android:textSize="20sp"
					android:layout_marginLeft="3dp"
					android:layout_marginRight="3dp" />

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/countdown_shape"
					android:orientation="vertical" >

					<TextView
						android:id="@+id/countdown_mm"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:shadowColor="#003000"
						android:shadowDx="0"
						android:shadowDy="2"
						android:shadowRadius="2"
						android:textColor="#ffffff"
						android:textSize="@dimen/countdown_fontsize2" />
				</LinearLayout>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:shadowColor="#003000"
					android:shadowDx="0"
					android:shadowDy="2"
					android:shadowRadius="2"
					android:text=":"
					android:textColor="#ffffff"
					android:textSize="20sp"
					android:layout_marginLeft="3dp"
					android:layout_marginRight="3dp" />

				<LinearLayout
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:background="@drawable/countdown_shape"
					android:orientation="vertical" >

					<TextView
						android:id="@+id/countdown_ss"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:shadowColor="#003000"
						android:shadowDx="0"
						android:shadowDy="2"
						android:shadowRadius="2"
						android:textColor="#ffffff"
						android:textSize="@dimen/countdown_fontsize2" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/first_disclaimer"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#DDFFFFFF"
			android:clickable="true"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="20dp"
			android:visibility="gone" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:gravity="center"
				android:shadowColor="#FFFFFF"
				android:shadowDx="0"
				android:shadowDy="2"
				android:shadowRadius="2"
				android:text="@string/first_disclaimer"
				android:textColor="#333333"
				android:textSize="21sp" />

			<TextView
				android:id="@+id/ascii_loading"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="30dp"
				android:gravity="center"
				android:shadowColor="#FFFFFF"
				android:shadowDx="0"
				android:shadowDy="2"
				android:shadowRadius="2"
				android:textColor="#333333"
				android:textSize="21sp" />

			<TextView
				android:id="@+id/disclaimer_notifs"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:gravity="center"
				android:shadowColor="#FFFFFF"
				android:shadowDx="0"
				android:shadowDy="2"
				android:shadowRadius="2"
				android:text="@string/first_disclaimer_notifs"
				android:textColor="#333333"
				android:textSize="21sp" />

			<TextView
				android:id="@+id/disclaimer_valider"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:shadowColor="#FFFFFF"
				android:shadowDx="0"
				android:shadowDy="2"
				android:shadowRadius="2"
				android:text="@string/first_disclaimer_valider"
				android:textColor="#333333"
				android:textSize="21sp" />
		</LinearLayout>

		<LinearLayout
			android:id="@+id/about"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:background="#CC000000"
			android:gravity="center"
			android:orientation="vertical"
			android:padding="20dp"
			android:visibility="gone" >

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:shadowColor="#000000"
				android:shadowDx="0"
				android:shadowDy="2"
				android:shadowRadius="2"
				android:text="@string/about"
				android:textColor="#DDDDDD"
				android:textSize="21sp" />
		</LinearLayout>

		</RelativeLayout>
</LinearLayout>
